--- a/package.json
+++ b/package.json
@@ -1,37 +1,23 @@
 {
-  "name": "qajs-2024-03",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/main.js",
-    "format:ci": "prettier . --check",
-    "format": "prettier . --write",
-    "lint:ci": "eslint .",
-    "lint": "eslint . --fix",
-    "codestyle:ci": "run-p lint:ci format:ci",
-    "codestyle": "run-s lint format"
-  },
-  "author": "Damir Rysaev <freepad@ya.ru>",
-  "keywords": [],
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.23.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "globals": "^16.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
-    "typescript-eslint": "^8.27.0"
-  },
-  "dependencies": {
-    "next": "^15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  }
+    "name": "otus-qajs",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/main.js",
+        "lint:ci": "eslint .",
+        "lint": "eslint . --fix"
+    },
+    "author": "Damir Rysaev <freepad@ya.ru>",
+    "keywords": [],
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.18.0",
+        "eslint": "^9.18.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-prettier": "^5.2.3",
+        "globals": "^15.14.0",
+        "npm-run-all2": "^7.0.2",
+        "prettier": "^3.4.2"
+    }
 }
